# xgrid

./: .gitignore  LICENSE  Makefile  README.md  TODO  cavity.py  pyproject.toml  requirements.txt  sketch.py  sketch.txt  test.py
examples/: cavity.py
xgrid/: __init__.py
xgrid/grid/: __init__.py  tarray.py
xgrid/lang/: __init__.py  compile.py  generator.py  operator.py  parser.py
xgrid/lang/ir/: __init__.py  expression.py  statement.py  visitor.py
xgrid/util/: __init__.py  console.py  ffi.py  init.py  logging.py
xgrid/util/typing/: __init__.py  annotation.py  reference.py  value.py
xgrid/xgrid/: __init__.py
